# imbak

./: Cargo.toml  README.md  email.eml
src/: main.rs
src/cli/: args.rs  backup_args.rs  backup_command.rs  mod.rs
src/simple_imap/: imap_client.rs  imap_client_credentials.rs  imap_client_options.rs  imap_mailbox.rs  imap_mailbox_name.rs  imap_session.rs  mod.rs
src/utils/: prompt.rs
