[package]
author = "Ben Heidemann <ben@heidemann.dev>"
name = "imbak"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.0", features = ["derive"] }
imap = "2.4.1"
native-tls = "0.2.11"
rpassword = "7.2.0"
secrecy = "0.8.0"
